--- a/06-deployEIT/package.json
+++ b/06-deployEIT/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.0.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.2",
     "morgan": "~1.9.1",
